samples/_failures_safe/1761208211_0a6cee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3b3fe9e.c: In function ‘main’:
./samples/SAFE/__tmp_a3b3fe9e.c:177:5: error: expected expression at end of input
  177 |     if (!
      |     ^~
./samples/SAFE/__tmp_a3b3fe9e.c:177:5: error: expected declaration or statement at end of input
